# twitch-logger

./: .dockerignore  .editorconfig  .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
.sqlx/: query-28a36d558c451a866dec6e1d4e6085e336c53fab03bdfde4aa089899fa73332b.json
lists/: bots.txt  channels.txt  ignored_users.txt
migrations/: 001_init.sql  002_add_indexes.sql  002_user_id.sql
src/: main.rs
src/api/: mod.rs
src/api/v1/: chart.rs  log.rs  mod.rs  stats.rs
src/database/: chart.rs  log.rs  mod.rs  stats.rs
src/global/: mod.rs
src/twitch/: chat.rs
src/utils/: mod.rs
