[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
twitch-irc = "5.0.0"
sqlx = { version = "0.7.0", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "time",
  "chrono",
] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
actix-web = "4.3.1"
tracing-actix-web = "0.7.5"
serde_with = "3.0.0"
actix-cors = "0.6.4"
cached = "0.44.0"
dotenv = "0.15.0"
anyhow = "1.0.73"
